Bug 0019090, align buttons

--- a/src/app/pages/edit-categories/add-edit-category/add-edit-category.component.scss
+++ b/src/app/pages/edit-categories/add-edit-category/add-edit-category.component.scss
@@ -26,4 +26,8 @@
 
 .form-wrapper {
     padding: 1rem;
+    .btn {
+        width: 90px;
+        margin-left: 5px;
+    }
 }
